--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<h1>HELLO WORLD</h1>
+<!DOCTYPE>
+<html lang="pl">
+<head>
+    <title>Git ZŻ Tutorial</title>
+</head>
+<body>
+    <h1>Hello world</h1>
+</body>
