--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Git ZŻ Tutorial</title>
 </head>
 <body>
-    <h1>Hello world</h1>
+    <h1 class="container">Hello world</h1>
     <p>from third branch</p>
+    <h2>zaprogramujzycie.pl</h2>
 </body>
