Added a p tag with my name

--- a/index.html
+++ b/index.html
@@ -7,4 +7,5 @@
     <h1 class="main" style="color: red;">Hello world</h1>
     <p>from third branch</p>
     <h2>zaprogramujzycie.pl</h2>
+    <p>Karolina</p>
 </body>
