--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE>
 <html lang="pl">
 <head>
-    <title>Git ZŻ Tutorial</title>
+  <title>Git ZŻ Tutorial</title>
 </head>
 <body>
-    <h1 class="main" style="color: red;">Hello world</h1>
-    <p>from third branch</p>
-    <h2>zaprogramujzycie.pl</h2>
-    <p>I want to become a software developer</p>
-    <p>Karolina</p>
+<div class="container">
+  <h1>Hello world</h1>
+  <p>from third branch</p>
+  <h2>zaprogramujzycie.pl</h2>
+  <p>I want to become a software developer</p>
+  <p>Karolina</p>
+</div>
 </body>
